--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Heading</h1>
     <p>para</p>
     <h2>Added another heading</h2>
-    <h1>git hub</h1>
+    <h1>git hub intro</h1>
 </body>
 </html>
